Landing and sign up page ready

--- a/App/index.html
+++ b/App/index.html
@@ -1,16 +1,66 @@
 <!doctype html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/master.css">
-	<link rel="stylesheet" href="responsive.css">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport"
+		      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/master.css">
+		<link rel="stylesheet" href="css/responsive.css">
+		<title>FBO | 10 kroków</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="headerLogo headerElement">
+				<a href="index.html"> <img src="images/baners/baner-white.png" alt="Logo FBO"></a>
+			</div>
+			<div class="headerTitle headerElement">
+				<h1>10 kroków - skuteczny plan dla Twoich pieniędzy</h1>
+			</div>
+		</header>
+		<nav class="nav">
+			<div class="navElement">
+				<a id="linkHome" href="http://marciniwuc.com">Blog</a>
+			</div>
+			<div class="navElement">
+				<a id="linkLoginPage" href="html/sign-in.html">Logowanie</a>
+			</div>
+		</nav>
+		<main>
+			<section class="section">
+				<aside class="quote">
+					<p>„Zrobić budżet to wskazać swoim pieniądzom dokąd mają iść,
+						zamiast zastanawiać się, gdzie się rozeszły. ”</p>
+					<p class="quoteAuthor">John C. Maxwell</p>
+				</aside>
+				<article>
+					<h1 class="sectionTitle">10 kroków - skuteczny plan dla Twoich pieniędzy</h1>
+					<p>Finanse osobiste są proste i, o ile sami nie komplikujemy sprawy szukając magicznych formuł,
+						łatwo je
+						zrozumieć. Najtrudniejszy jest początek, bo zwykle nie wiemy od czego zacząć. Ta aplikacja to
+						dla
+						Ciebie
+						gotowy plan, który skutecznie pomoże Ci zadbać o własne finanse. Oparta jest ona na prostej
+						zasadzie:
+						zamiast się rozpraszać robiąc 10 rzeczy na raz, skoncentruj się i spokojnie – krok po kroku –
+						osiągnij
+						cel.
 
-    <title>Finanse Bardzo Osobiste</title>
-</head>
-<body>
-</body>
+						Budując dom zaczynamy od fundamentów, później stawiamy ściany, dopiero na końcu kładziemy dach.
+						W
+						finansach też występuje logiczna kolejność: zanim zaczniesz grać o miliony, najpierw zbuduj
+						solidny
+						fundament. </p>
+					<div class="buttonDiv">
+						<a href="http://marciniwuc.com/10-krokow-skuteczny-plan-dla-twoich-pieniedzy/" class="button">Dowiedz
+							się więcej</a>
+					</div>
+				</article>
+			</section>
+		</main>
+		<footer>
+			<p><a href="http://jacekgalka.pl">&copy; 2016 Jacek Gałka</a></p>
+		</footer>
+	</body>
 </html>
