--- a/App/html/sign-up.html
+++ b/App/html/sign-up.html
@@ -20,8 +20,8 @@
 			</div>
 		</header>
 		<main>
-			<section class="signUpSection">
-				<h1 class="signUpTitle">Rejestracja użytkownika</h1>
+			<section class="signSection">
+				<h1 class="signTitle">Rejestracja użytkownika</h1>
 				<form class="formDiv" action="" method="post">
 					<div class="formElement">
 						<span>Imie</span>
@@ -35,6 +35,7 @@
 						<span>Hasło</span>
 						<input class="" type="password" name="password" minlength="8" maxlength="20"
 						       title="Podaj swoje hasło">
+						<span class="passwordOk">Hasło musi zawierać co najmniej 8 znaków</span>
 					</div>
 					<div class="formElement">
 						<span>Wiek</span>
