No account yet span center patch

--- a/App/html/sign-in.html
+++ b/App/html/sign-in.html
@@ -36,7 +36,9 @@
 						<input class="button" type="submit" value="Zaloguj mnie" style="cursor:pointer">
 					</div>
 				</form>
-				<span>Nie masz jeszcze konta? <a href="sign-up.html">Zarejestruj się</a></span>
+				<div id="noAccountYet">
+					<span>Nie masz jeszcze konta? <a href="sign-up.html">Zarejestruj się</a></span>
+				</div>
 			</section>
 		</main>
 		<footer>
