Introduction page ready

--- a/App/html/sign-in.html
+++ b/App/html/sign-in.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/master.css">
 		<link rel="stylesheet" href="../css/responsive.css">
-		<title>Zaloguj się</title>
+		<title>FBO | Zaloguj się</title>
 	</head>
 	<body>
 		<header class="header">
@@ -21,8 +21,8 @@
 		</header>
 		<main>
 			<section class="signSection">
-				<h1 class="signTitle">Logowanie użytkownika</h1>
-				<form class="formDiv" action="" method="post">
+				<h1 class="signTitle hideTitle">Logowanie użytkownika</h1>
+				<form class="formDiv" action="introduction.html" method="">
 					<div class="formElement">
 						<span>Adres e-mail</span>
 						<input type="email" name="email" maxlength="20" title="Podaj swój adres e-mail" autofocus>
