--- a/App/html/sign-up.html
+++ b/App/html/sign-up.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/master.css">
 		<link rel="stylesheet" href="../css/responsive.css">
-		<title>Zarejestruj się</title>
+		<title>FBO | Zarejestruj się</title>
 	</head>
 	<body>
 		<header class="header">
@@ -21,7 +21,7 @@
 		</header>
 		<main>
 			<section class="signSection">
-				<h1 class="signTitle">Rejestracja użytkownika</h1>
+				<h1 class="signTitle  hideTitle">Rejestracja użytkownika</h1>
 				<form class="formDiv" action="" method="post">
 					<div class="formElement">
 						<span>Imie</span>
