--- a/App/index.html
+++ b/App/index.html
@@ -35,7 +35,7 @@
 					<p class="quoteAuthor">John C. Maxwell</p>
 				</aside>
 				<article>
-					<h1 class="sectionTitle">10 kroków - skuteczny plan dla Twoich pieniędzy</h1>
+					<h1 class="hideTitle">10 kroków - skuteczny plan dla Twoich pieniędzy</h1>
 					<p>Finanse osobiste są proste i, o ile sami nie komplikujemy sprawy szukając magicznych formuł,
 						łatwo je
 						zrozumieć. Najtrudniejszy jest początek, bo zwykle nie wiemy od czego zacząć. Ta aplikacja to
