--- a/App/html/sign-in.html
+++ b/App/html/sign-in.html
@@ -22,7 +22,7 @@
 		<main>
 			<section class="signSection">
 				<h1 class="signTitle hideTitle">Logowanie użytkownika</h1>
-				<form class="formDiv" action="introduction.html" method="">
+				<form class="formDiv" action="introduction.html" method="GET">
 					<div class="formElement">
 						<span>Adres e-mail</span>
 						<input type="email" name="email" maxlength="20" title="Podaj swój adres e-mail" autofocus>
