Budget mobile in portrait mode ready

--- a/App/html/budget.html
+++ b/App/html/budget.html
@@ -31,6 +31,14 @@
 		</header>
 		<main>
 			<section>
+				<div class="budgetDescription">
+					<span class="budgetDescCatName">Kategoria</span>
+					<div class="budgetDescAmounts">
+						<span>Rozdysponowane</span>
+						<span>Wydane</span>
+						<span>Dostępne</span>
+					</div>
+				</div>
 				<div class="group">
 					<div class="groupNameDiv">
 						<span class="groupName">Najważniejsze po...</span>
@@ -38,12 +46,18 @@
 						     style="width: 25px; height: 25px">
 					</div>
 					<div class="groupAmountDiv">
+						<span class="groupAmount groupAmountHidable">3950,00zł</span>
+						<span class="groupAmount groupAmountHidable">32130,00 zł</span>
 						<span class="groupAmount">3 950,00 zł</span>
 					</div>
 				</div>
 				<div class="category">
 					<span class="categoryName">Jedzenie i picie</span>
-					<span class="categoryAmount amountGreen">1 700,00 zł</span>
+					<div class="categoryAmounts">
+						<span class="categoryAmount categoryAmountHidable">1 700,00 zł</span>
+						<span class="categoryAmount categoryAmountHidable">0,00 zł</span>
+						<span class="categoryAmount amountGreen">1 700,00 zł</span>
+					</div>
 				</div>
 				<div class="category">
 					<span class="categoryName">Koszty leczenia i leki</span>
