Budget mobile in portrait mode patch v2

--- a/App/html/budget.html
+++ b/App/html/budget.html
@@ -23,7 +23,7 @@
 					<img class="monthDivElement" src="../images/icons/svg/next.svg" style="width: 20px; height: 20px"
 					     alt="Następny miesiąc">
 				</div>
-				<div class="toBudgetDiv">
+				<div class="toBudgetDiv yellowAmount">
 					<span class="toBudgetAmount">1 500,00 zł</span>
 					<span class="toBudgetDesc">Do rozdysponowania</span>
 				</div>
@@ -130,14 +130,16 @@
 						<td class="budCatAmount budCatAvailable"><span class="greenAmount">1 300,00 zł</span></td>
 					</tr>
 					<tr class="budNewGroup">
-						<td id="newGroupTD">
-							Dodaj nową grupę
-						</td>
+						<td id="newGroupTD">Dodaj nową grupę</td>
+						<td class="hideable"></td>
+						<td class="hideable"></td>
 						<td></td>
 					</tr>
 					<tr class="budSum">
 						<td class="budSumName">SUMA</td>
-						<td class="budSumAmount">5 000,00 zł</td>
+						<td class="budSumAmount hideable">5 250,00 zł</td>
+						<td class="budSumAmount hideable">200,00 zł</td>
+						<td class="budSumAmount">5 050,00 zł</td>
 					</tr>
 					</tbody>
 				</table>
