Budget page ready

--- a/App/html/budget.html
+++ b/App/html/budget.html
@@ -11,142 +11,193 @@
 		<title>FBO | Budżet</title>
 	</head>
 	<body>
-		<header class="budgetHeader">
-			<div class="hamburger">
-				<img src="../images/icons/svg/hamburger.svg" style="width: 40px; height: 40px">
-			</div>
-			<div class="headerElements">
-				<div class="monthDiv">
-					<img class="monthDivElement" src="../images/icons/svg/back.svg" style="width: 20px; height: 20px"
-					     alt="Poprzedni miesiąc">
-					<span class="curMonth monthDivElement">Maj 2017</span>
-					<img class="monthDivElement" src="../images/icons/svg/next.svg" style="width: 20px; height: 20px"
-					     alt="Następny miesiąc">
+		<div class="budgetGrid">
+			<nav class="mainMenuContainer">
+				<div class="mainMenu">
+					<div class="menuLogo">
+						<img src="../images/baners/logo-white.png" alt="Logo FBO">
+					</div>
+					<div class="menuButtons">
+						<a href="budget.html" class="menuButton budgetButton activeMenu">Budżet</a>
+						<a href="transactions.html" class="menuButton transactionsButton">Transakcje</a>
+						<a href="reports.html" class="menuButton reportsButton">Raporty</a>
+					</div>
+					<div class="menuAccounts">
+						<div class="accounts">
+							<div class="accountsDesc">
+								<span class="accountDescName">Budżet</span>
+								<span class="accountDescSum">4 850,00 zł</span>
+							</div>
+							<div class="account">
+								<span class="accountName">Gotówka</span>
+								<span class="accountAmount">200,00 zł</span>
+							</div>
+							<div class="account">
+								<span class="accountName">Konto bieżące</span>
+								<span class="accountAmount">1 200,00 zł</span>
+							</div>
+							<div class="account">
+								<span class="accountName">Konto oszczędnościowe</span>
+								<span class="accountAmount">3 450,00 zł</span>
+							</div>
+						</div>
+						<div class="accounts">
+							<div class="accountsDesc">
+								<span class="accountDescName">Oszczędności</span>
+								<span class="accountDescSum">8 430,00 zł</span>
+							</div>
+							<div class="account">
+								<span class="accountName">Lokata</span>
+								<span class="accountAmount">3 000,00 zł</span>
+							</div>
+							<div class="account">
+								<span class="accountName">Fundusze inwestycyjne</span>
+								<span class="accountAmount">5 430,00 zł</span>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="toBudgetDiv yellowAmount">
-					<span class="toBudgetAmount">1 500,00 zł</span>
-					<span class="toBudgetDesc">Do rozdysponowania</span>
+				<div class="menuSettingsLink">
+					<a href="settings.html"><img src="../images/icons/svg/settings-white.svg" alt="Settings"
+					                             style="width: 60px"></a>
 				</div>
-			</div>
-		</header>
-		<main>
-			<section>
-				<table class="budgetTableContainer">
-					<thead>
-					<tr class="budDesc">
-						<th class="budDescName">Kategoria</th>
-						<th class="budDescAmount hideable">Rozdysponowane</th>
-						<th class="budDescAmount hideable">Wydane</th>
-						<th class="budDescAmount">Dostępne</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr class="budGroup">
-						<td class="budGroupName">Najważniejsze po... <img src="../images/icons/svg/plus.svg"
-						                                                  alt="Dodaj nową kategorię"
-						                                                  style="width: 20px"></td>
-						<td class="budGroupAmount hideable">3 950,00 zł</td>
-						<td class="budGroupAmount hideable">200,00 zł</td>
-						<td class="budGroupAmount">3 750,00 zł</td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Jedzenie i picie</td>
-						<td class="budCatAmount hideable">1 700,00 zł</td>
-						<td class="budCatAmount hideable">200,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">1 500,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Koszty leczenia i leki</td>
-						<td class="budCatAmount hideable">35,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">35,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Ubranie</td>
-						<td class="budCatAmount hideable">500,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">500,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Czynsz za mieszkanie</td>
-						<td class="budCatAmount hideable">460,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">460,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Prąd</td>
-						<td class="budCatAmount hideable">90,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">90,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Koszty dojazdu do pracy</td>
-						<td class="budCatAmount hideable">180,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="yellowAmount">180,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Higiena, kosmetyki, fryzjer</td>
-						<td class="budCatAmount hideable">220,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">220,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Środki czystości</td>
-						<td class="budCatAmount hideable">120,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">120,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Wydatki na szkołe i przedszkole</td>
-						<td class="budCatAmount hideable">550,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">550,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Telefon, internet</td>
-						<td class="budCatAmount hideable">95,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">95,00 zł</span></td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Inne niezbędne potrzeby</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greyAmount">0,00 zł</span></td>
-					</tr>
-					<tr class="budGroup">
-						<td class="budGroupName">Raty składki i podatki <img src="../images/icons/svg/plus.svg"
-						                                                     alt="Dodaj nową kategorię"
-						                                                     style="width: 20px"></td>
-						<td class="budGroupAmount hideable">1 300,00 zł</td>
-						<td class="budGroupAmount hideable">0,00 zł</td>
-						<td class="budGroupAmount">1 300,00 zł</td>
-					</tr>
-					<tr class="budCategory">
-						<td class="budCatName">Rata kredytu hipotecznego</td>
-						<td class="budCatAmount hideable">1 300,00 zł</td>
-						<td class="budCatAmount hideable">0,00 zł</td>
-						<td class="budCatAmount budCatAvailable"><span class="greenAmount">1 300,00 zł</span></td>
-					</tr>
-					<tr class="budNewGroup">
-						<td id="newGroupTD">Dodaj nową grupę</td>
-						<td class="hideable"></td>
-						<td class="hideable"></td>
-						<td></td>
-					</tr>
-					<tr class="budSum">
-						<td class="budSumName">SUMA</td>
-						<td class="budSumAmount hideable">5 250,00 zł</td>
-						<td class="budSumAmount hideable">200,00 zł</td>
-						<td class="budSumAmount">5 050,00 zł</td>
-					</tr>
-					</tbody>
-				</table>
-			</section>
-		</main>
-		<footer>
-			<p><a href="http://jacekgalka.pl">&copy; 2016 Jacek Gałka</a></p>
-		</footer>
+			</nav>
+			<main class="budgetMain">
+				<header class="budgetHeader">
+					<div class="hamburger">
+						<img src="../images/icons/svg/hamburger.svg" style="width: 40px; height: 40px">
+					</div>
+					<div class="headerElements">
+						<div class="monthDiv">
+							<img class="monthDivElement" src="../images/icons/svg/back.svg"
+							     style="width: 20px; height: 20px"
+							     alt="Poprzedni miesiąc">
+							<span class="curMonth monthDivElement">Maj 2017</span>
+							<img class="monthDivElement" src="../images/icons/svg/next.svg"
+							     style="width: 20px; height: 20px"
+							     alt="Następny miesiąc">
+						</div>
+						<div class="toBudgetDiv yellowAmount">
+							<span class="toBudgetAmount">1 500,00 zł</span>
+							<span class="toBudgetDesc">Do rozdysponowania</span>
+						</div>
+					</div>
+				</header>
+				<section class="budgetTableSection">
+					<table class="budgetTable">
+						<thead>
+						<tr class="budDesc">
+							<th class="budDescName">Kategoria</th>
+							<th class="budDescAmount hideable">Rozdysponowane</th>
+							<th class="budDescAmount hideable">Wydane</th>
+							<th class="budDescAmount">Dostępne</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr class="budGroup">
+							<td class="budGroupName">Najważniejsze po... <img src="../images/icons/svg/plus.svg"
+							                                                  alt="Dodaj nową kategorię"
+							                                                  style="width: 20px"></td>
+							<td class="budGroupAmount hideable">3 950,00 zł</td>
+							<td class="budGroupAmount hideable">200,00 zł</td>
+							<td class="budGroupAmount">3 750,00 zł</td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Jedzenie i picie</td>
+							<td class="budCatAmount hideable">1 700,00 zł</td>
+							<td class="budCatAmount hideable">200,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">1 500,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Koszty leczenia i leki</td>
+							<td class="budCatAmount hideable">35,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">35,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Ubranie</td>
+							<td class="budCatAmount hideable">500,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">500,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Czynsz za mieszkanie</td>
+							<td class="budCatAmount hideable">460,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">460,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Prąd</td>
+							<td class="budCatAmount hideable">90,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">90,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Koszty dojazdu do pracy</td>
+							<td class="budCatAmount hideable">180,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="yellowAmount">180,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Higiena, kosmetyki, fryzjer</td>
+							<td class="budCatAmount hideable">220,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">220,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Środki czystości</td>
+							<td class="budCatAmount hideable">120,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">120,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Wydatki na szkołe i przedszkole</td>
+							<td class="budCatAmount hideable">550,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">550,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Telefon, internet</td>
+							<td class="budCatAmount hideable">95,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">95,00 zł</span></td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Inne niezbędne potrzeby</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greyAmount">0,00 zł</span></td>
+						</tr>
+						<tr class="budGroup">
+							<td class="budGroupName">Raty składki i podatki <img src="../images/icons/svg/plus.svg"
+							                                                     alt="Dodaj nową kategorię"
+							                                                     style="width: 20px"></td>
+							<td class="budGroupAmount hideable">1 300,00 zł</td>
+							<td class="budGroupAmount hideable">0,00 zł</td>
+							<td class="budGroupAmount">1 300,00 zł</td>
+						</tr>
+						<tr class="budCategory">
+							<td class="budCatName">Rata kredytu hipotecznego</td>
+							<td class="budCatAmount hideable">1 300,00 zł</td>
+							<td class="budCatAmount hideable">0,00 zł</td>
+							<td class="budCatAmount budCatAvailable"><span class="greenAmount">1 300,00 zł</span></td>
+						</tr>
+						<tr class="budNewGroup">
+							<td id="newGroupTD">Dodaj nową grupę</td>
+							<td class="hideable"></td>
+							<td class="hideable"></td>
+							<td></td>
+						</tr>
+						<tr class="budSum">
+							<td class="budSumName">SUMA</td>
+							<td class="budSumAmount hideable">5 250,00 zł</td>
+							<td class="budSumAmount hideable">200,00 zł</td>
+							<td class="budSumAmount">5 050,00 zł</td>
+						</tr>
+						</tbody>
+					</table>
+				</section>
+			</main>
+		</div>
 	</body>
 </html>
