--- a/App/html/introduction.html
+++ b/App/html/introduction.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../css/responsive.css">
 		<title>Document</title>
 	</head>
-	<body>
+	<body class="widthLimit">
 		<header class="header">
 			<div class="headerLogo headerElement">
 				<a href="../index.html"><img src="../images/baners/baner-white.png" alt="Logo FBO"></a>
