--- a/App/index.html
+++ b/App/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="css/responsive.css">
 		<title>FBO | 10 kroków</title>
 	</head>
-	<body>
+	<body class="widthLimit">
 		<header class="header">
 			<div class="headerLogo headerElement">
 				<a href="index.html"> <img src="images/baners/baner-white.png" alt="Logo FBO"></a>
@@ -28,7 +28,7 @@
 			</div>
 		</nav>
 		<main>
-			<section class="section">
+			<section class="textSection">
 				<aside class="quote">
 					<p>„Zrobić budżet to wskazać swoim pieniądzom dokąd mają iść,
 						zamiast zastanawiać się, gdzie się rozeszły. ”</p>
